spacing and form corrected, media breakpoints for large and medium screens completed

--- a/styles/big-image-cards.css
+++ b/styles/big-image-cards.css
@@ -19,6 +19,7 @@
     width: 100%;
     height: 758px;
     padding: 40px 0;
+    margin-top: -30px;
 }
 
 .orange-card__picture{
