--- a/styles/form.css
+++ b/styles/form.css
@@ -1,5 +1,6 @@
 .big-picture-with-form{
     width: 100%;
+    margin-bottom: -40px;
 }
 
 .big-picture__form{
@@ -12,6 +13,7 @@
     display: flex;
     /* flex-wrap: wrap; */
     align-items: center;
+    justify-content: space-evenly;
 
     background-color: rgb(243, 242, 239);
     box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.08);
@@ -20,20 +22,22 @@
 }
 
 .form__inputs-div{
-    width: calc(100% + 16px);
-    height: 72px;
+    max-width: 1024px;
+    min-width: 95%;
+    height: 88px;
     margin: -8px;
     z-index: inherit;
 
     display: flex;
-    align-items: flex-end;
-    justify-content: space-evenly;
+    align-items: center;
+    justify-content: center;
 }
 
 .form__location-div{
-    max-width: 41.67%;
-    width: 410.73px;
-    height: 72px;
+    min-width: 41.67%;
+    /* max-width: 41.67%;
+    width: 426.73px; */
+    height: 88px;
     padding: 8px;
     margin: 0;
     z-index: inherit;
@@ -61,9 +65,10 @@
 }
 
 .form__dates-div{
-    max-width: 33.33%;
-    width: 325.39px;
-    height: 72px;
+    min-width: 33.33%;
+    /* max-width: 33.33%;
+    width: 341.39px; */
+    height: 88px;
     padding: 8px;
     margin: 0;
     z-index: inherit;
@@ -91,9 +96,10 @@
 }
 
 .form__guests-div{
-    max-width: 25%;
-    min-width: 240.03px;
-    height: 72px;
+    min-width: 25%;
+    /* max-width: 25%;
+    min-width: 256.03px; */
+    height: 88px;
     padding: 8px;
     margin: 0;
     z-index: inherit;
@@ -104,7 +110,7 @@
 
 .guests-div__container{
     min-height: 48px;
-    width: 100%;
+    min-width: 100%;
     padding: 0 12px;
     z-index: inherit;
 
@@ -119,7 +125,7 @@
 }
 
 .guests-div__input{
-    width: 189.03;
+    width: 100%;
     height: 28px;
     z-index: inherit;
 }
@@ -128,8 +134,7 @@
     width: 16px;
     height: 14px;
     position: relative;
-    left: 210px;
-    bottom: 31px;
+    right: 5px;
     z-index: 2000;
 }
 
@@ -176,11 +181,11 @@
 }
 
 .form__search-button{
-    width: 51px;
-    height: 47px;
+    min-width: 44.23px;
+    height: 43px;
     margin-left: 16px;
     position: relative;
-    top: 16px;
+    top: 10px;
 
     display: flex;
     justify-content: center;
@@ -189,6 +194,14 @@
     border: 2px solid rgb(0, 197, 133);
     border-radius: 24px;
     background-color: rgb(0, 197, 133);
+
+    font-family: Calibri, Helvetica, Arial, sans-serif;
+    font-size: 17px;
+    line-height: 1.15em;
+    letter-spacing: 0.1px;
+    font-weight: 600;
+    color: rgb(255, 255, 255);
+
     transition: background-color 0.2s ease 0s, color 0.2s ease 0s, border 0.2s ease 0s;
 }
 
