--- a/styles/global.css
+++ b/styles/global.css
@@ -6,7 +6,7 @@ body{
 
     background-color: rgb(243, 242, 239);
     color: rgb(40, 64, 12);
-    font-family: Calibri, "Helvetica Neue", sans-serif;
+    font-family: Calibre, "Helvetica Neue", sans-serif;
     text-size-adjust: 100%;
 
     display: flex;
