--- a/styles/small-image-cards.css
+++ b/styles/small-image-cards.css
@@ -2,7 +2,6 @@
 .two-picture-cards-container{
     width: 100%;
     height: 500px;
-    margin-top: 32px;
 
     display: flex;
 }
@@ -129,7 +128,7 @@
     margin-bottom: 32px;
 
     font-family: Calibri, Helvetica, Arial, sans-serif;
-    font-size: 28px;
+    font-size: 24px;
     font-weight: 500;
     letter-spacing: 0px;
     line-height: 36px;
@@ -234,20 +233,20 @@
 
 .medium-vertical-container__heading{
     font-family: Calibri, Helvetica, Arial, sans-serif;
-    font-size: 28px;
+    font-size: 24px;
     font-weight: 500;
     letter-spacing: 0px;
-    line-height: 36px;
+    line-height: 30px;
     text-align: center;
     color: rgb(255, 255, 255);
 }
 
 .medium-vertical-container__text{
     font-family: Calibri, Helvetica, Arial, sans-serif;
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 500;
     letter-spacing: 0px;
-    line-height: 28px;
+    line-height: 24px;
     text-align: center;
     color: rgb(255, 255, 255);
 }
